--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -1,7 +1,7 @@
-root: ./docs/
+root: ./
 
 structure:  
-    Introduction: Introduction.md  
+    readme: README.md  
     summary: SUMMARY.md
     
 redirects:  
